src/test/ui/generic/generic-type-params-name-repr.stderr
error[E0308]: mismatched types
  --> $DIR/generic-type-params-name-repr.rs:13:25
   |
LL |     let _: Foo<isize> = ();
   |                         ^^ expected struct `Foo`, found ()
   |
   = note: expected type `Foo<isize>`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/generic-type-params-name-repr.rs:20:31
   |
LL |     let _: Foo<isize, B, C> = ();
   |                               ^^ expected struct `Foo`, found ()
   |
   = note: expected type `Foo<isize>`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/generic-type-params-name-repr.rs:27:37
   |
LL |     let _: HashMap<String, isize> = ();
   |                                     ^^ expected struct `HashMap`, found ()
   |
   = note: expected type `HashMap<std::string::String, isize>`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/generic-type-params-name-repr.rs:32:51
   |
LL |     let _: HashMap<String, isize, Hash<String>> = ();
   |                                                   ^^ expected struct `HashMap`, found ()
   |
   = note: expected type `HashMap<std::string::String, isize>`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/generic-type-params-name-repr.rs:39:31
   |
LL |     let _: Foo<A, isize, C> = ();
   |                               ^^ expected struct `Foo`, found ()
   |
   = note: expected type `Foo<A, isize>`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/generic-type-params-name-repr.rs:46:27
   |
LL |     let _: Foo<A, B, C> = ();
   |                           ^^ expected struct `Foo`, found ()
   |
   = note: expected type `Foo`
              found type `()`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.
